--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <link rel="stylesheet" href="./css/styles.css"/>
   <link rel="stylesheet" href="./css/overlay.css"/>
   <link rel="stylesheet" href="./css/configuration.css"/>
+  <link rel="stylesheet" href="./css/game.css"/>
+  <script src="./js/config.js" defer></script>
+  <script src="./js/game.js" defer></script>
+  <script src="./js/app.js" defer></script>
 </head>
 <body>
   <div id="backdrop"></div>
@@ -23,10 +27,14 @@
       <form>
         <div class="form-control">
           <label for="playername">Player name</label>
-          <input type="text" name="playername" id="playername"/>
+          <input type="text" name="playername" id="playername" required/>
+          <p></p>
         </div>
+
+        <p id="config-errors"></p>
+
         <div>
-          <button class="btn btn-alt" type="button">Cancel</button>
+          <button class="btn btn-alt" type="reset" id="cancel-config-btn">Cancel</button>
           <button class="btn" type="submit">Confirm</button>
         </div>
       </form>
@@ -34,44 +42,44 @@
     <section id="game-configuration">
       <ol>
         <li>
-          <article>
+          <article id="player-1-data">
             <h2>Player 1</h2>
             <h3>Player Name</h3>
             <p class="player-symbol">X</p>
-            <button class="btn btn-alt">Edit</button>
+            <button class="btn btn-alt" id="edit-player-1-btn" data-playerid="1">Edit</button>
           </article>
         </li>
         <li>
-          <article>
+          <article id="player-2-data">
             <h2>Player 2</h2>
             <h3>Player Name</h3>
             <p class="player-symbol">O</p>
-            <button class="btn btn-alt">Edit</button>
+            <button class="btn btn-alt" id="edit-player-2-btn" data-playerid="2">Edit</button>
           </article>
         </li>
       </ol>
-      <button class="btn">Start New Game</button>
+      <button class="btn" id="start-game-btn">Start New Game</button>
     </section>
 
     <section id="active-game">
-      <article>
-        <h3>You won <span id="winner-name">Player Name</span>!</h3>
+      <article id="game-over">
+        <h2>You won <span id="winner-name">Player Name</span>!</h2>
         <p>Click "Start New Game", to start a new game!</p>
       </article>
 
       <p>It's your turn <span id="active-player-name">Player Name</span>!</p>
-      <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+      <ol id="game-board">
+        <li data-col="1" data-row="1"></li>
+        <li data-col="2" data-row="1"></li>
+        <li data-col="3" data-row="1"></li>
+        
+        <li data-col="1" data-row="2"></li>
+        <li data-col="2" data-row="2"></li>
+        <li data-col="3" data-row="2"></li>
 
-        <li></li>
-        <li></li>
-        <li></li>
-
-        <li></li>
-        <li></li>
-        <li></li>
+        <li data-col="1" data-row="3"></li>
+        <li data-col="2" data-row="3"></li>
+        <li data-col="3" data-row="3"></li>
       </ol>
     </section>
   </main>
